<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>NeuroglancerLinkDialog</class>
 <widget class="QDialog" name="NeuroglancerLinkDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>318</width>
    <height>173</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
        <string>Neuroglander Server</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="serverEdit"/>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QCheckBox" name="grayscaleCheckBox">
     <property name="text">
      <string>Grayscale</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="segmentationCheckBox">
     <property name="text">
      <string>Segmentation</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="synapseCheckBox">
     <property name="text">
      <string>Synapses</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="bookmarkCheckBox">
     <property name="text">
      <string>Bookmarks</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>NeuroglancerLinkDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>NeuroglancerLinkDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
